--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 data
 
 # models folder
-models
+CI/models
 
 # results folder
 results
@@ -18,3 +18,9 @@ __pycache__
 
 # folder for storing rough code/notebooks/data/etc.
 rough
+
+# runs of YOLO
+runs
+
+# YOLO models
+*.pt
