--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dataclasses-json = "^0.6.4"
 numpy = "^2.0.0"
 opencv-python = "^4.10.0.84"
 fiftyone = "^0.24.1"
+black = "^24.4.2"
 
 [build-system]
 requires = ["poetry-core"]
