--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ numpy = "^2.0.0"
 opencv-python = "^4.10.0.84"
 fiftyone = "^0.24.1"
 black = "^24.4.2"
+flake8 = "^7.1.0"
 
 [build-system]
 requires = ["poetry-core"]
