--- a/reefbuilder_segmentation/logging_config.json
+++ b/reefbuilder_segmentation/logging_config.json
@@ -7,17 +7,27 @@
     }
   },
   "handlers": {
-    "stdout": {
+    "stderr": {
       "class": "logging.StreamHandler",
+      "level": "WARNING",
       "formatter": "simple",
-      "stream": "ext://sys.stdout"
+      "stream": "ext://sys.stderr"
+    },
+    "file": {
+      "class": "logging.handlers.RotatingFileHandler",
+      "level": "DEBUG",
+      "formatter": "simple",
+      "filename": "/Users/ish/github_repos/reefbuilder_segmentation/reefbuilder_segmentation/logs/rf_seg.log",
+      "maxBytes": 10000,
+      "backupCount": 3
     }
   },
   "loggers": {
     "root": {
-      "level": "INFO",
+      "level": "DEBUG",
       "handlers": [
-        "stdout"
+        "stderr",
+        "file"
       ]
     }
   }
